<resources>
    <string name="app_name">U乐达</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="recommended_str">推荐</string>
    <string name="help_each_other_str">互助</string>
    <string name="activity_str">活动</string>
    <string name="follow_str">关注</string>
    <string name="navigation_str">导航</string>
    <string name="task_str">任务</string>
    <string name="filtrate_str">筛选</string>
    <string name="load_more_str">加载更多</string>
    <string name="message_str">消息</string>
    <string name="back_str">〈 返回</string>

    <string name="scan_text">扫描签到</string>
    <string name="activity_example">这是一场我也不知道是什么的活动</string>


    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="textsize">
        <item>小</item>
        <item>中</item>
        <item>大</item>
    </string-array>

    <string-array name="task_type">
        <item>任务</item>
        <item>项目</item>
        <item>活动</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="transition_big_image">big_image</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">"完成"</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="dispute_prompt_title">对方或您发起了纠纷！</string>
    <string name="dispute_hint">请不要担心，在任务到期24小时内填写任务进行说明，我们将依此做出判断。如需帮助，请联系客服。</string>

</resources>

