<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dp"-->
                <!--android:layout_weight="3"-->
                <!--android:background="@color/colorUMain"></LinearLayout>-->


            <LinearLayout
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:background="@color/colorUMain"
                android:weightSum="12">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:background="@color/colorUMain"
                    android:scaleType="fitCenter"
                    android:src="@drawable/switch_button" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/main_icon" />
                </FrameLayout>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:background="@color/colorUMain"
                    android:scaleType="fitCenter"
                    android:src="@drawable/search_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:background="@color/colorUSwitch"
                android:orientation="horizontal"
                android:weightSum="5">

                <Button
                    android:id="@+id/recommended_bt"
                    style="@style/UMainMapSwitchButton"
                    android:text="@string/recommended_str" />

                <Button
                    android:id="@+id/help_each_other_bt"
                    style="@style/UMainMapSwitchButton"
                    android:text="@string/help_each_other_str" />

                <Button
                    android:id="@+id/activity_bt"
                    style="@style/UMainMapSwitchButton"
                    android:text="@string/activity_str" />

                <Button
                    android:id="@+id/follow_bt"
                    style="@style/UMainMapSwitchButton"
                    android:text="@string/follow_str" />

                <Button
                    android:id="@+id/navigation_bt"
                    style="@style/UMainMapSwitchButton"
                    android:text="@string/navigation_str" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:paddingLeft="10dp"
                android:text="推广：PPAP社招新了！！！"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="82">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/float_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/float_button"
                    app:backgroundTint="@android:color/black"
                    app:rippleColor="@android:color/black" />

                <com.tencent.tencentmap.mapsdk.map.MapView
                    android:id="@+id/map_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></com.tencent.tencentmap.mapsdk.map.MapView>
            </android.support.design.widget.CoordinatorLayout>
        </LinearLayout>

        <include layout="@layout/view_add" />

    </RelativeLayout>
</LinearLayout>